fix(styles): corrects font size on smaller screens

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,6 +47,8 @@ $navbar-note: 0;
 }
 
 :root {
+  font-size: 10px;
+
   @include sm {
     font-size: 12px;
   }
